# add_executable(hello_benchmark hello_benchmark.cc)
# target_link_libraries(hello_benchmark benchmark)

# add_executable(two_vector_benchmark two_vector_benchmark.cc)
# target_link_libraries(two_vector_benchmark benchmark)

# add_executable(vector_benchmark vector_benchmark.cc)
# target_link_libraries(vector_benchmark benchmark)

# add_executable(veclist_benchmark veclist_benchmark.cc)
# target_link_libraries(veclist_benchmark benchmark)

# add_executable(hello_benchmark hello_benchmark.cc)
# target_link_libraries(hello_benchmark benchmark)

# add_executable(accumulate_benchmark accumulate.cc)
# target_link_libraries(accumulate_benchmark benchmark)
